Fix overflowing image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -782,6 +782,7 @@ section {
 --------------------------------------------------*/
 
 #intro {
+    overflow: hidden;
     padding-top: 100px;
     padding-bottom: 130px;
     text-align: center;
